# zaroxi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NEED_FILES.md  README.md  clippy.toml  download-fonts.sh  download_grammars.sh  flake.nix  help-desktop.sh  package-lock.json
ai/ai-agent/: Cargo.toml
ai/ai-agent/src/: executor.rs  lib.rs  patch.rs  planner.rs  tools.rs  verify.rs
apps/desktop/: Cargo.toml  README.md  build.rs  build.sh  check-setup.js  download-fonts.sh  fix-permissions.sh  make-executable.sh  package-lock.json  package.json  pnpm-lock.yaml  run.sh  setup.sh  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/frontend/: index.css  index.html  main.tsx
apps/desktop/frontend/app/: App.tsx  globals.css
apps/desktop/frontend/app/bootstrap/: AppProvider.tsx  ErrorBoundary.tsx  FontLoader.tsx  TauriProvider.tsx
apps/desktop/frontend/app/shell/: AppShell.tsx
apps/desktop/frontend/components/editor/: CodeEditor.tsx
apps/desktop/frontend/components/editor/gutter/: GutterConfig.ts  GutterLayout.ts  GutterStyle.ts  GutterView.tsx  LineNumberGutter.tsx
apps/desktop/frontend/components/layout/: Toolbar.tsx
apps/desktop/frontend/components/ui/: Icon.tsx  Text.tsx
apps/desktop/frontend/features/assistant/containers/: AssistantPanelContainer.tsx
apps/desktop/frontend/features/assistant/panel/: AssistantPanel.tsx
apps/desktop/frontend/features/editor/containers/: EditorContainer.tsx
apps/desktop/frontend/features/explorer/panel/: ExplorerPanel.tsx
apps/desktop/frontend/features/settings/components/: ThemeSettings.tsx
apps/desktop/frontend/features/settings/pages/: SettingsPage.tsx
apps/desktop/frontend/features/settings/panel/: SettingsPanel.tsx
apps/desktop/frontend/features/tabs/: TabItem.tsx  TabStrip.tsx  store.ts
apps/desktop/frontend/features/welcome/: WelcomeView.tsx
apps/desktop/frontend/features/workbench/components/: ActivityRail.tsx  MenuBar.tsx  PanelHost.tsx  TopBar.tsx
apps/desktop/frontend/features/workbench/config/: activityRegistry.ts  layoutConstants.ts
apps/desktop/frontend/features/workbench/store/: workbenchStore.ts
apps/desktop/frontend/features/workspace/components/: ExplorerTree.tsx  WorkspaceExplorer.tsx
apps/desktop/frontend/features/workspace/containers/: ExplorerContainer.tsx  WorkspaceContainer.tsx  (+1 more)
apps/desktop/frontend/hooks/: useWorkspaceName.ts
apps/desktop/frontend/layouts/shell/: ActivityRail.tsx  AppShell.tsx  CommandPalette.tsx  StatusBar.tsx
apps/desktop/frontend/lib/keyboard/: KeyboardShortcutsProvider.tsx
apps/desktop/frontend/lib/platform/: windowControls.ts
apps/desktop/frontend/lib/theme/: ThemeProvider.tsx  font-tokens.ts  fonts.css  nerd-font-icons.ts  theme-store.ts  types.ts
apps/desktop/frontend/styles/: global.css  tokens.css
apps/desktop/src/: app.rs  bootstrap.rs  commands.rs  main.rs  message.rs  state.rs  theme.rs  update.rs  view.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  lib.rs  main.rs  menu.rs  zaroxi_infra_permissions.rs
apps/desktop/src-tauri/src/adapters/: mod.rs  workspace_adapter.rs
apps/desktop/src-tauri/src/bootstrap/: setup.rs
apps/desktop/src-tauri/src/commands/: editor.rs  mod.rs  workspace.rs  zaroxi_infra_settings.rs
apps/desktop/src-tauri/src/events/: assistant_events.rs  editor_events.rs  mod.rs  workspace_events.rs
apps/desktop/src-tauri/src/menu/: mod.rs
apps/desktop/src-tauri/src/services/: editor_service.rs  mod.rs  theme_service.rs  workspace_service.rs
apps/desktop/src-tauri/src/windows/: mod.rs
apps/desktop/src/app/bootstrap/: TauriProvider.tsx
apps/desktop/src/components/editor/: CodeEditor.tsx
apps/desktop/src/explorer/: actions.rs  mod.rs  model.rs  state.rs
apps/desktop/src/settings/: editor.rs  persistence.rs
apps/desktop/src/ui/: activity_bar.rs  assistant_panel.rs  chat.rs  common.rs  editor.rs  editor_panel.rs  explorer.rs  explorer_panel.rs  icons.rs  layout.rs  mod.rs  shell.rs  sidebar.rs  status_bar.rs  style.rs  syntax_editor.rs  top_bar.rs
apps/desktop/src/ui/layout/: assistant.rs  editor.rs  explorer.rs  mod.rs  search.rs  settings.rs  status_bar.rs  topbar.rs
apps/desktop/src/ui/settings/: editor_font_settings.rs  mod.rs
apps/desktop/src/update/: dialog.rs  editor.rs  explorer.rs  mod.rs  workspace.rs
crates/syntax-core/: Cargo.toml  build.rs
crates/syntax-core/queries/toml/: highlights.scm  injections.scm  locals.scm  tags.scm
crates/syntax-core/src/: dynamic_loader.rs  error.rs  grammar_builder.rs  grammar_registry.rs  highlight.rs  language.rs  lib.rs  manager.rs  parser.rs  query_cache.rs  runtime.rs
crates/zaroxi-core-ids/: Cargo.toml
crates/zaroxi-core-ids/src/: lib.rs
crates/zaroxi-domain-ai-context/: Cargo.toml
crates/zaroxi-domain-ai-context/src/: lib.rs  prompt.rs  ranking.rs
crates/zaroxi-domain-editor/: Cargo.toml
crates/zaroxi-domain-editor/src/: cursor.rs  document.rs  document_cache.rs  document_syntax_cache.rs  editor.rs  events.rs  lib.rs  selection.rs  thresholds.rs  viewport.rs
crates/zaroxi-lang-lsp/: Cargo.toml
crates/zaroxi-lang-syntax/: Cargo.toml  build.rs
crates/zaroxi-lang-syntax/src/: cache.rs  document.rs  dynamic_loader.rs  error.rs  grammar_builder.rs  grammar_registry.rs  highlight.rs  language.rs  lib.rs  manager.rs  parser.rs  query_cache.rs  runtime.rs  theme_map.rs
crates/zaroxi-lang-syntax/tests/: debug_toml_nodes.rs  toml_highlight.rs
crates/zaroxi-ops-file/: Cargo.toml
crates/zaroxi-ops-file/src/: file_loader.rs  workspace.rs
crates/zaroxi-ops-patch/: Cargo.toml
crates/zaroxi-protocol/: Cargo.toml
crates/zaroxi-service-ai/: Cargo.toml
crates/zaroxi-service-ai/src/: service.rs  tasks.rs
crates/zaroxi-service-workspace/: Cargo.toml
crates/zaroxi-service-workspace/src/: service.rs  workspace_manager.rs
crates/zaroxi-theme/: Cargo.toml
crates/zaroxi-theme/src/: colors.rs  lib.rs  manager.rs  theme.rs
language/syntax-core/: Cargo.toml
language/syntax-core/src/: lib.rs
operations/file-ops/: Cargo.toml
operations/file-ops/src/: lib.rs
(+80 files in other folders)
