[workspace]
resolver = "3"
members = [
  "apps/desktop/src-tauri",
  "crates/core-types",
  "crates/editor-core",
  "crates/workspace-model",
  "crates/lsp-client",
  "crates/ai-context",
  "crates/ai-agent",
  "crates/patch-engine",
  "crates/rpc",
  "crates/settings",
  "crates/permissions",
  "crates/file-ops",
  "crates/syntax-core",
  "crates/theme",
  "services/workspace-daemon",
  "services/ai-daemon",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }
tree-sitter-rust = "0.24"
tree-sitter-toml = "0.20"
tree-sitter = "0.26.8"
libloading = "0.8"
ureq = { version = "2", features = ["json"] }
tempfile = "3"
cc = "1.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.10.3", features = [] }
