[workspace]
resolver = "2"
members = [
  # Library crates
  "crates/zaroxi-ai-agent",
  "crates/zaroxi-core-ids",
  "crates/zaroxi-domain-ai-context",
  "crates/zaroxi-domain-editor",
  "crates/zaroxi-domain-workspace",
  "crates/zaroxi-infra-permissions",
  "crates/zaroxi-infra-rpc",
  "crates/zaroxi-infra-settings",
  "crates/zaroxi-lang-lsp",
  "crates/zaroxi-lang-syntax",
  "crates/zaroxi-ops-file",
  "crates/zaroxi-ops-patch",
  "crates/zaroxi-protocol",
  "crates/zaroxi-service-ai",
  "crates/zaroxi-service-workspace",
  "crates/zaroxi-theme",

  # Application binaries
  "apps/desktop/src-tauri",
  "apps/ai-daemon",
  "apps/workspace-daemon",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "sync",
  "io-util",
  "time",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
rfd = { version = "0.14", default-features = false, features = [
  "tokio",
  "xdg-portal",
] }
tree-sitter = "0.26.8"
libloading = "0.8"
ureq = { version = "2", features = ["json"] }
tempfile = "3"
cc = "1.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.10.3", features = [] }
tauri-build = "2.10.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"

# Add workspace crate dependencies
zaroxi-protocol = { path = "crates/zaroxi-protocol" }
zaroxi-domain-editor = { path = "crates/zaroxi-domain-editor" }
zaroxi-domain-workspace = { path = "crates/zaroxi-domain-workspace" }
zaroxi-domain-ai-context = { path = "crates/zaroxi-domain-ai-context" }
zaroxi-ai-agent = { path = "crates/zaroxi-ai-agent" }
zaroxi-ops-patch = { path = "crates/zaroxi-ops-patch" }
zaroxi-infra-rpc = { path = "crates/zaroxi-infra-rpc" }
zaroxi-infra-settings = { path = "crates/zaroxi-infra-settings" }
zaroxi-infra-permissions = { path = "crates/zaroxi-infra-permissions" }
zaroxi-ops-file = { path = "crates/zaroxi-ops-file" }
zaroxi-lang-syntax = { path = "crates/zaroxi-lang-syntax" }
zaroxi-theme = { path = "crates/zaroxi-theme" }
zaroxi-service-ai = { path = "crates/zaroxi-service-ai" }
zaroxi-service-workspace = { path = "crates/zaroxi-service-workspace" }
zaroxi-lang-lsp = { path = "crates/zaroxi-lang-lsp" }
zaroxi-core-ids = { path = "crates/zaroxi-core-ids" }
