[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }
anyhow = { workspace = true }
core-types = { path = "../../crates/core-types" }
workspace-model = { path = "../../crates/workspace-model" }
editor-buffer = { path = "../../crates/editor-buffer" }
file-ops = { path = "../../crates/file-ops" }
uuid = { workspace = true }
iced = { version = "0.12", features = ["tokio", "multi-window"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
rfd = { workspace = true }
