[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
core-types = { path = "../../crates/core-types" }
workspace-model = { path = "../../crates/workspace-model" }
editor-core = { path = "../../crates/editor-core" }
file-ops = { path = "../../crates/file-ops" }
syntax-core = { path = "../../crates/syntax-core", features = ["rust", "toml"] }
uuid.workspace = true
iced = { version = "0.12", features = ["tokio", "multi-window", "image", "svg"] }
iced_core = "0.12"
serde.workspace = true
serde_json.workspace = true
dirs = "5.0"
rfd.workspace = true
settings = { path = "../../crates/settings" }
rpc = { path = "../../crates/rpc" }

[features]
default = []

[build-dependencies]
anyhow.workspace = true
