[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
core-types = { path = "../../crates/core-types" }
workspace-model = { path = "../../crates/workspace-model" }
editor-core = { path = "../../crates/editor-core" }
file-ops = { path = "../../crates/file-ops" }
syntax-core = { path = "../../crates/syntax-core", features = ["dynamic-loading"] }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5.0"
rfd.workspace = true
settings = { path = "../../crates/settings" }
rpc = { path = "../../crates/rpc" }
tree-sitter = "0.26.8"
log = "0.4"
env_logger = "0.11"
theme = { path = "../../crates/theme" }

[features]
default = []

[build-dependencies]
anyhow.workspace = true
