[package]
name = "syntax-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-toml = { version = "0.20", optional = true }
ropey = "1.6"
thiserror = "1.0"
libloading = { version = "0.8", optional = true }
tempfile = "3.10"
clap = { version = "4.4", features = ["derive"] }
ureq = { version = "2.9", default-features = false, features = ["tls"] }

[features]
default = ["rust", "toml", "dynamic-loading"]
rust = ["tree-sitter-rust"]
toml = ["tree-sitter-toml"]
markdown = ["dynamic-loading"]  # Markdown uses dynamic loading only
dynamic-loading = ["libloading"]

[[bin]]
name = "download-grammars"
path = "src/bin/download_grammars.rs"
