[package]
name = "syntax-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.8"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-toml = { version = "0.20", optional = true }
ropey = "1.6"
thiserror = "1.0"
libloading = { version = "0.8", optional = true }
tempfile = "3.10"
clap = { version = "4.4", features = ["derive"] }
ureq = { version = "2.9", default-features = false, features = ["tls"] }
serde = { version = "1", features = ["derive"] }

[features]
default = ["dynamic-loading"]
dynamic-loading = ["libloading"]

[[bin]]
name = "download-grammars"
path = "src/bin/download_grammars.rs"
[[bin]]
name = "build-grammar"
path = "src/bin/build_grammar.rs"
