[package]
name = "zaroxi-lang-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol client for Zaroxi"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_lang_lsp"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []
