[package]
name = "zaroxi-lang-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntax highlighting and parsing for Zaroxi"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_lang_syntax"
path = "src/lib.rs"

[dependencies]
tree-sitter = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
libloading = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
dynamic-loading = []
