[package]
name = "zaroxi-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol definitions for Zaroxi"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# Workspace crates
zaroxi-core-ids = { workspace = true }

[features]
default = []
