[package]
name = "zaroxi-service-ai"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "AI service orchestration logic for Zaroxi Studio"

[dependencies]
zaroxi-ai-agent = { workspace = true }
zaroxi-domain-ai-context = { workspace = true }
zaroxi-protocol = { workspace = true }
zaroxi-infra-rpc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
