[package]
name = "zaroxi-service-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI service orchestration logic for Zaroxi Studio"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_service_ai"
path = "src/lib.rs"

[dependencies]
zaroxi-ai-agent = { workspace = true }
zaroxi-domain-ai-context = { workspace = true }
zaroxi-protocol = { workspace = true }
zaroxi-infra-rpc = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
