[package]
name = "syntax-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
libloading = { workspace = true }
ropey = "1.6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = "1.0"
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-toml = { workspace = true }
ureq = { workspace = true, features = ["json"] }
