[package]
name = "file-ops"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-types = { path = "../../core-types" }
editor-core = { path = "../../language/editor-core" }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
