[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zaroxi Desktop - Tauri application"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["shell-open", "process-command-api", "updater", "notification-all", "global-shortcut"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Workspace crates
core-types = { path = "../../../crates/core-types" }
editor-core = { path = "../../../crates/editor-core" }
workspace-model = { path = "../../../crates/workspace-model" }
ai-context = { path = "../../../crates/ai-context" }
ai-agent = { path = "../../../crates/ai-agent" }
patch-engine = { path = "../../../crates/patch-engine" }
rpc = { path = "../../../crates/rpc" }
settings = { path = "../../../crates/settings" }
permissions = { path = "../../../crates/permissions" }
file-ops = { path = "../../../crates/file-ops" }
syntax-core = { path = "../../../crates/syntax-core" }
theme = { path = "../../../crates/theme" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
inherits = "workspace-dev"

[profile.release]
inherits = "workspace-release"
