[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zaroxi Desktop - Tauri application"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Workspace crates
zaroxi-protocol = { path = "../../../crates/zaroxi-protocol" }
zaroxi-domain-editor = { path = "../../../language/zaroxi-domain-editor" }
zaroxi-domain-workspace = { path = "../../../domain/zaroxi-domain-workspace" }
zaroxi-domain-zaroxi-domain-ai-context = { path = "../../../ai/zaroxi-domain-zaroxi-domain-ai-context" }
zaroxi-zaroxi-ai-agent = { path = "../../../ai/zaroxi-zaroxi-ai-agent" }
zaroxi-ops-patch = { path = "../../../operations/zaroxi-ops-patch" }
zaroxi-infra-zaroxi-infra-rpc = { path = "../../../infrastructure/zaroxi-infra-zaroxi-infra-rpc" }
zaroxi-infra-zaroxi-infra-settings = { path = "../../../infrastructure/zaroxi-infra-zaroxi-infra-settings" }
zaroxi-infra-zaroxi-infra-permissions = { path = "../../../infrastructure/zaroxi-infra-zaroxi-infra-permissions" }
zaroxi-ops-file = { path = "../../../operations/zaroxi-ops-file" }
zaroxi-lang-syntax = { path = "../../../language/zaroxi-lang-syntax" }
zaroxi-zaroxi-theme = { path = "../../../crates/zaroxi-zaroxi-theme" }

[features]
default = []

# Profiles are inherited from workspace root
