[package]
name = "zaroxi-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zaroxi Desktop - Tauri application"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "desktop"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rfd = { workspace = true }
chrono = { workspace = true }

# Workspace crates - all under crates/ directory
zaroxi-protocol = { workspace = true }
zaroxi-domain-editor = { workspace = true }
zaroxi-domain-workspace = { workspace = true }
zaroxi-domain-ai-context = { workspace = true }
zaroxi-ai-agent = { workspace = true }
zaroxi-ops-patch = { workspace = true }
zaroxi-infra-rpc = { workspace = true }
zaroxi-infra-settings = { workspace = true }
zaroxi-infra-permissions = { workspace = true }
zaroxi-ops-file = { workspace = true }
zaroxi-lang-syntax = { workspace = true }
zaroxi-theme = { workspace = true }
zaroxi-service-ai = { workspace = true }
zaroxi-service-workspace = { workspace = true }
zaroxi-lang-lsp = { workspace = true }
zaroxi-core-ids = { workspace = true }

# Additional dependencies for file operations
parking_lot = { workspace = true }

[features]
default = []

# Profiles are inherited from workspace root
